generated/checkers/gen/AllGen-UAF-67801fa67b94ebd0e4da7a77ac2d9f321b75fbe0/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:243:45: error: unable to deduce ‘const auto*’ from ‘clang::ento::ProgramState::get() const [with T = {anonymous}::PublishedMap; typename clang::ento::ProgramStateTrait<T>::data_type = llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*>]()’
  243 |   const auto *PM = State->get<PublishedMap>();
      |                                             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:243:45: note:   mismatched types ‘const auto*’ and ‘llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*>’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:297:45: error: unable to deduce ‘const auto*’ from ‘clang::ento::ProgramState::get() const [with T = {anonymous}::PublishedMap; typename clang::ento::ProgramStateTrait<T>::data_type = llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*>]()’
  297 |   const auto *PM = State->get<PublishedMap>();
      |                                             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:297:45: note:   mismatched types ‘const auto*’ and ‘llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*>’
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
